[package]
name = "leptos-rust-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Untuk development
[dev-dependencies]
wasm-bindgen-test = "0.3"

# Optimasi WASM build
[profile.release]
opt-level = "z"           # Optimasi ukuran
lto = true                # Link-time optimization
codegen-units = 1         # Single codegen unit untuk size
panic = "abort"           # Abort on panic (smaller binary)
strip = true              # Strip symbols

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = "z"